--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,6 +1,6 @@
 .header-text {
-        font-family: Seymour One;
-        font-weight: 800;
+        font-family: var(--secondary-font);
+        font-weight: 700;
         font-size: 18px;
         line-height: 1.33;
         text-align: center;
