--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -40,3 +40,15 @@ img {
         margin-right: auto;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 736px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1158px;
+    }
+}
