--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -30,25 +30,20 @@ img {
 
 
 .container {
-    padding: 0 16px;
-}
+    width: 480px;
+    margin: 0 auto;
+    padding: 0 20px;
 
-@media screen and (min-width: 480px) {
-    .container {
-        width: 396px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+@media screen and (max-width: 479px) {
+    width: 100%;
 }
 
 @media screen and (min-width: 768px) {
-    .container {
-        width: 736px;
-    }
+    width: 768px;
+    padding: 0 32px;
 }
 
 @media screen and (min-width: 1200px) {
-    .container {
-        width: 1158px;
-    }
-}
+    width: 1200px;
+    padding: 0 16px;
+}}
