--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,7 +9,10 @@
       <li class="social_link"></li>
       <li class="social_link"></li>
     </ul>
-    <p>Feel free to contact <a href="tel:+610383766284"></a></p>
+    <p>
+      Feel free to contact
+      <a href="tel:+610383766284">+610383766284</a>
+    </p>
 
     <p>© 2022 - IceCream. All Rights Reserved.</p>
   </div>
