--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,9 +5,9 @@
       <p class="footer_title_first">homemade ice cream made</p>
       <p class="footer_title_secondary">with passion</p>
       <ul>
-        <li class="social_link"></li>
-        <li class="social_link"></li>
-        <li class="social_link"></li>
+        <li class="social_link">github</li>
+        <li class="social_link">telegram</li>
+        <li class="social_link">facebook</li>
       </ul>
       <p>
         Feel free to contact
