--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,9 +5,33 @@
       <p class="footer_title_first">homemade ice cream made</p>
       <p class="footer_title_secondary">with passion</p>
       <ul>
-        <li class="social_link">github</li>
-        <li class="social_link">telegram</li>
-        <li class="social_link">facebook</li>
+        <li class="social_link">github
+          <a href="">
+            <svg width="34" height="34">
+              <use href="./images/sprite.svg#icon-github">
+
+              </use>
+            </svg>
+          </a>
+        </li>
+        <li class="social_link">telegram
+          <a href="">
+            <svg width="34" height="34">
+              <use href="./images/sprite.svg#icon-telegram">
+
+              </use>
+            </svg>
+          </a>
+        </li>
+        <li class="social_link">facebook
+          <a href="">
+            <svg width="34" height="34">
+              <use href="./images/sprite.svg#icon-facebook">
+
+              </use>
+            </svg>
+          </a>
+        </li>
       </ul>
       <p>
         Feel free to contact
