add  text style

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,43 +1,40 @@
 <footer class="footer_body">
-    <div class="container">
-      <button type="button" class="locations_btn">Our Locations</button>
-      <button type="button" class="franchise_btn">Franchise</button>
-      <p class="footer_title_first">homemade ice cream made</p>
-      <p class="footer_title_secondary">with passion</p>
-      <ul>
-        <li class="social_link">github
-          <a href="">
-            <svg width="34" height="34">
-              <use href="./images/sprite.svg#icon-github">
+  <div class="container">
+    <button type="button" class="locations_btn">Our Locations</button>
+    <button type="button" class="franchise_btn">Franchise</button>
+    <p class="footer_title_first">homemade ice cream made</p>
+    <p class="footer_title_secondary">with passion</p>
+    <ul>
+      <li class="social-item">
+        github
+        <a href="">
+          <svg class="social-icon" width="34" height="34">
+            <use href="./images/sprite.svg#icon-github"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-item">
+        telegram
+        <a href="">
+          <svg class="social-icon" width="34" height="34">
+            <use href="./images/sprite.svg#icon-telegram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-item">
+        facebook
+        <a href="">
+          <svg class="social-icon" width="34" height="34">
+            <use href="./images/sprite.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <p>
+      Feel free to contact
+      <a href="tel:+610383766284">+610383766284</a>
+    </p>
 
-              </use>
-            </svg>
-          </a>
-        </li>
-        <li class="social_link">telegram
-          <a href="">
-            <svg width="34" height="34">
-              <use href="./images/sprite.svg#icon-telegram">
-
-              </use>
-            </svg>
-          </a>
-        </li>
-        <li class="social_link">facebook
-          <a href="">
-            <svg width="34" height="34">
-              <use href="./images/sprite.svg#icon-facebook">
-
-              </use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-      <p>
-        Feel free to contact
-        <a href="tel:+610383766284">+610383766284</a>
-      </p>
-  
-      <p>© 2022 - IceCream. All Rights Reserved.</p>
-    </div>
-  </footer>
+    <p class="text-copyright">© 2022 - IceCream. All Rights Reserved.</p>
+  </div>
+</footer>
