--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,9 +1,5 @@
-.header-text {
-        font-family: var(--secondary-font);
-        font-weight: 700;
-        font-size: 48px;
-        line-height: 1.33;
-        // text-align: center;
-        text-transform: uppercase;
-        color: yellowgreen;
+.header-main-nav {
+        background-color: #84A178;
+        display: flex;
+        align-items: center;
 }
