--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -3,3 +3,43 @@
         display: flex;
         align-items: center;
 }
+.header-site-nav {
+        display: flex;
+        align-items: center;
+        margin-left: 308px;
+        margin-top: 32px;
+        margin-right: 204px;
+        margin-bottom: 13px;
+}
+.header-item {
+        margin-right: 28px;
+}
+.header-item:last-child {
+        margin-right: 0;
+}
+.header-nav-link {
+        color: #FCFCFC;
+        font-family: var(--primary-font);
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.25;
+}
+.header-button {
+        display: block;
+        width: 152px;
+        height: 42px;
+        margin-bottom: 20px;
+        margin-bottom: 3px;
+        padding: 12px 51px 12px 36px;
+        border-radius: 4px;
+        border: transparent;
+        color: #000000;
+        background-color: #F8D24E;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        cursor: pointer;
+        text-align: center;
+        font-family: var(--primary-font);
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 1.2;
+}
