position social link

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,9 +4,9 @@
     <button type="button" class="franchise_btn">Franchise</button>
     <p class="footer_title_first">homemade ice cream made</p>
     <p class="footer_title_secondary">with passion</p>
-    <ul>
-      <li class="social-item">
-        github
+    <ul class="social-link-list">
+      <li class="social-item ">
+        
         <a href="">
           <svg class="social-icon" width="34" height="34">
             <use href="./images/sprite.svg#icon-github"></use>
@@ -14,7 +14,7 @@
         </a>
       </li>
       <li class="social-item">
-        telegram
+        
         <a href="">
           <svg class="social-icon" width="34" height="34">
             <use href="./images/sprite.svg#icon-telegram"></use>
@@ -22,7 +22,7 @@
         </a>
       </li>
       <li class="social-item">
-        facebook
+        
         <a href="">
           <svg class="social-icon" width="34" height="34">
             <use href="./images/sprite.svg#icon-facebook"></use>
