--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,3 +1,9 @@
+// .container {
+//   width: 100%;
+//   max-width: 320px;
+//   padding-left: 20px;
+//   padding-right: 20px;
+// }
 .footer_title_first {
   font-family: var(--primary-font);
   font-style: normal;
@@ -27,11 +33,25 @@
   line-height: 152%;
   text-align: center;
   color: #7a7a7a;
+  // border: 1px solid #E1E1E1;
 }
 .footer_body {
   background-color: #84a178;
 }
+.social-item {
+  display: inline-block;
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  background-color:  #F8D24E;;
+}
 
 .social-icon {
-  fill: #f8d24e;
+  fill:#84a178;
+}
+.social-link-list {
+display: flex;
+justify-content: flex-end;
+gap: 20px;
+margin-bottom: 20px;
 }
