--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,5 @@
 <section>
-    <div class="gallery"></div>
-    <div></div>
+    <div class="container">
+        тут твій код
+    </div>
 </section>
