--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./stylegalery.css">
+</head>
 <section>
-    <div class="container">
+    <div class="container gallery">
         тут твій код
+        <div class="grennbg"></div>
+        <div class="gallery-img">
+            <ul>
+                <li>
+                    <picture>
+                        <source srcset="../images/gallery/desk-gallery-1-@1x-1013.webp  1x, ../images/gallery/desk-gallery-1-@1x-1013.webp 2x" type="image/webp" />
+                        <source srcset="../images/gallery/desk-gallery-1-@1x-1013.jpg 1x, ../images/gallery/desk-gallery-1-@2x-1013.jpg 2x" />
+                        <img src="../images/gallery/desk-gallery-1-@1x-1013.jpg" alt="ice cream 1" width="1013" />
+                    </picture>
+                </li>
+                <li>
+                    <picture>
+                        <source srcset="./images/daniel_wilson.webp  1x, ./images/daniel_wilson@2x.webp 2x" type="image/webp" />
+                        <source srcset="./images/daniel_wilson.jpg 1x, ./images/daniel_wilson@2x.jpg 2x" />
+                        <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson. UI Designer" width="264" />
+                    </picture>
+                </li>
+                <li>
+                    <picture>
+                        <source srcset="./images/daniel_wilson.webp  1x, ./images/daniel_wilson@2x.webp 2x" type="image/webp" />
+                        <source srcset="./images/daniel_wilson.jpg 1x, ./images/daniel_wilson@2x.jpg 2x" />
+                        <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson. UI Designer" width="264" />
+                    </picture>
+                </li>
+            </ul>
+        </div>
+        <div class="whitebg"></div>
     </div>
 </section>
