--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -27,5 +27,10 @@
         <button class="about-btn" type="button">Read more</button>
       </li>
     </ul>
+    <img
+  srcset="./images/about_cow_mob.png 1x, ./images/about_cow_mob@2x.png 2x"
+  src="./images/about_cow_mob.png"
+  alt="a cow grazes in the field"
+/>
   </div>
 </section>
