--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,9 +1,3 @@
-// .container {
-//   width: 100%;
-//   max-width: 320px;
-//   padding-left: 20px;
-//   padding-right: 20px;
-// }
 .footer_title_first {
   font-family: var(--primary-font);
   font-style: normal;
@@ -33,7 +27,8 @@
   line-height: 152%;
   text-align: center;
   color: #7a7a7a;
-  // border: 1px solid #E1E1E1;
+  margin-top: 12px;
+  padding-bottom: 20px;
 }
 .footer_body {
   background-color: #84a178;
@@ -43,15 +38,56 @@
   height: 34px;
   width: 34px;
   border-radius: 50%;
-  background-color:  #F8D24E;;
+  background-color: #f8d24e;
 }
 
 .social-icon {
-  fill:#84a178;
+  fill: #84a178;
 }
 .social-link-list {
-display: flex;
-justify-content: flex-end;
-gap: 20px;
-margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.footer-text-contacts {
+  font-family: var(--primary-font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 186%;
+  text-align: right;
+  color: #131313;
+}
+.footer-btn {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  font-family: var(--primary-font);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  // text-align: center;
+  color: #131313;
+  outline: none;
+  border: 0 solid transparent;
+  border-radius: 10px;
+  background-color: #f8d24e;
+  margin-bottom: 16px;
+  width: 196px;
+  justify-content: center;
+}
+
+.footer-string {
+  display: block;
+  border-top: 1px solid #e1e1e1;
+}
+.buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer-phone-number {
+  color: #FCFCFC;
 }
