--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -18,23 +18,17 @@
         <div class="gallery-img">
             <ul>
                 <li>
-                    <picture>
-                        <source srcset="../images/gallery/desk-gallery-1-@1x-1013.webp  1x, ../images/gallery/desk-gallery-1-@1x-1013.webp 2x" type="image/webp" />
-                        <source srcset="../images/gallery/desk-gallery-1-@1x-1013.jpg 1x, ../images/gallery/desk-gallery-1-@2x-1013.jpg 2x" />
-                        <img src="../images/gallery/desk-gallery-1-@1x-1013.jpg" alt="ice cream 1" width="1013" />
+                    <picture class="gallery-img-pictures">
+                        <img src="../images/gallery/desk-gallery-1-@1x-1013.jpg" alt="ice cream 1" width="1030px" />
                     </picture>
                 </li>
                 <li>
                     <picture>
-                        <source srcset="./images/daniel_wilson.webp  1x, ./images/daniel_wilson@2x.webp 2x" type="image/webp" />
-                        <source srcset="./images/daniel_wilson.jpg 1x, ./images/daniel_wilson@2x.jpg 2x" />
                         <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson. UI Designer" width="264" />
                     </picture>
                 </li>
                 <li>
                     <picture>
-                        <source srcset="./images/daniel_wilson.webp  1x, ./images/daniel_wilson@2x.webp 2x" type="image/webp" />
-                        <source srcset="./images/daniel_wilson.jpg 1x, ./images/daniel_wilson@2x.jpg 2x" />
                         <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson. UI Designer" width="264" />
                     </picture>
                 </li>
