--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -8,6 +8,7 @@ p {
   font-size: 18px;
   line-height: 22px;
   text-transform: uppercase;
+  margin-top: 60px;
   margin-bottom: 16px;
   color: #fcfcfc;
 }
@@ -72,7 +73,6 @@ p {
   line-height: 18px;
   display: flex;
   align-items: center;
-  // text-align: center;
   color: #131313;
   outline: none;
   border: 0 solid transparent;
