--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -30,6 +30,14 @@
     <picture>
       <source
         srcset="
+          ./images/about_cow_desk.webp    1x,
+          ./images/about_cow_desk@2x.webp 2x
+        "
+        type="image/webp"
+        media="(min-width: 1200px)"
+      />
+      <source
+        srcset="
           ./images/about_cow_desk.png    1x,
           ./images/about_cow_desk@2x.png 2x
         "
@@ -38,11 +46,27 @@
       />
       <source
         srcset="
+          ./images/about_cow_tablet.webp    1x,
+          ./images/about_cow_tablet@2x.webp 2x
+        "
+        type="image/webp"
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
           ./images/about_cow_tablet.png    1x,
           ./images/about_cow_tablet@2x.png 2x
         "
         type="image/png"
         media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/about_cow_mob.webp    1x,
+          ./images/about_cow_mob@2x.webp 2x
+        "
+        type="image/webp"
+        media="(min-width: 320px)"
       />
       <source
         srcset="./images/about_cow_mob.png 1x, ./images/about_cow_mob@2x.png 2x"
