--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -16,23 +16,41 @@
         тут твій код
         <div class="grennbg"></div>
         <div class="gallery-img">
-            <ul>
-                <li>
-                    <picture class="gallery-img-pictures">
-                        <img src="../images/gallery/desk-gallery-1-@1x-1013.jpg" alt="ice cream 1" width="1030px" />
-                    </picture>
-                </li>
-                <li>
-                    <picture>
-                        <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson. UI Designer" width="264" />
-                    </picture>
-                </li>
-                <li>
-                    <picture>
-                        <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson. UI Designer" width="264" />
-                    </picture>
-                </li>
-            </ul>
+            <img srcset="
+            ../images/gallery/mob-gallery-1-@1x-280.jpg 280w,
+            ../images/gallery/mob-gallery-1-@1x-480.jpg 480w,
+            ../images/gallery/mob-gallery-1-@2x-560.jpg 560w,
+            ../images/gallery/tab-gallery-1-@1x-704.jpg 704w,
+            ../images/gallery/mob-gallery-1-@2x-960.jpg 960w,
+            ../images/gallery/tab-gallery-1-@1x-1013.jpg 1013w,
+            ../images/gallery/tab-gallery-1-@2x-1408.jpg 1408w,
+            ../images/gallery/desk-gallery-1-@2x-2026.jpg 2026w
+            "
+            src="../images/gallery/desk-gallery-1-@1x-1013.jpg" alt="Мороженко">
+        </div>
+        <div class="gallery-img visual-hidden">
+            <img srcset="
+                    ../images/gallery/mob-gallery-2-@1x-280.jpg 280w,
+                    ../images/gallery/mob-gallery-2-@1x-480.jpg 480w,
+                    ../images/gallery/mob-gallery-2-@2x-560.jpg 560w,
+                    ../images/gallery/tab-gallery-2-@1x-704.jpg 704w,
+                    ../images/gallery/mob-gallery-2-@2x-960.jpg 960w,
+                    ../images/gallery/tab-gallery-2-@1x-1013.jpg 1013w,
+                    ../images/gallery/tab-gallery-2-@2x-1408.jpg 1408w,
+                    ../images/gallery/desk-gallery-2-@2x-2026.jpg 2026w
+                    " src="../images/gallery/desk-gallery-2-@1x-1013.jpg" alt="Мороженко2">
+        </div>
+        <div class="gallery-img visual-hidden">
+            <img srcset="
+                    ../images/gallery/mob-gallery-3-@1x-280.jpg 280w,
+                    ../images/gallery/mob-gallery-3-@1x-480.jpg 480w,
+                    ../images/gallery/mob-gallery-3-@2x-560.jpg 560w,
+                    ../images/gallery/tab-gallery-3-@1x-704.jpg 704w,
+                    ../images/gallery/mob-gallery-3-@2x-960.jpg 960w,
+                    ../images/gallery/tab-gallery-3-@1x-1013.jpg 1013w,
+                    ../images/gallery/tab-gallery-3-@2x-1408.jpg 1408w,
+                    ../images/gallery/desk-gallery-3-@2x-2026.jpg 2026w
+                    " src="../images/gallery/desk-gallery-3-@1x-1013.jpg" alt="Мороженко3">
         </div>
         <div class="whitebg"></div>
     </div>
