--- a/src/partials/stylegalery.css
+++ b/src/partials/stylegalery.css
@@ -1,4 +1,4 @@
- h1,
+    h1,
     h2,
     h3,
     h4,
@@ -27,45 +27,35 @@
         text-decoration: none;
     }
 
-    .container {
-        padding-left: 15px;
-        padding-right: 15px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+        .visual-hidden {
+            position: absolute;
+            white-space: nowrap;
+            width: 1px;
+            height: 1px;
+            overflow: hidden;
+            border: 0;
+            padding: 0;
+            clip: rect(0 0 0 0);
+            clip-path: inset(50%);
+            margin: -1px;
+        }
 
-.grennbg{
+                .gallery-img {
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+
+/* .grennbg{
+    background-color: ;
+} */
+.whitebg {
+    background-image: url("../images/background/mob-bg-@1x-581.jpg");
     width: 100%;
-    padding-top: 32px;
-    background-color: #84A178;
-}
-
-.gallery-img{
-    position: absolute;
-    margin-left: auto;
-        margin-right: auto;
-        left: 0;
-        right: 0;
-        text-align: center;
-}
-.gallery-img img{
-border-radius: 24px;
-    display: block;
         margin-left: auto;
         margin-right: auto;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
 }
-
-.whitebg{
-    background-image: url("../images/background/desk-bg-@1x-1300.jpg");
-    height: 1037px;
-    background-size: no-repeat;
-}
-
-.whitebg img {
-    position: relative;
-padding-left: 15px;
-padding-right: 15px;}
-
-                .gallery{
-position: fixed;
-min-width: 480px;}
