--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,12 @@
 <footer class="footer_body">
   <div class="container">
-    <p class="footer_title_first">homemade ice cream made</p>
-    <p class="footer_title_secondary">with passion</p>
+    <div class="footer">
+      <p class="footer_title_first">homemade ice cream made
+        <span class="footer_title_secondary">with passion</span>
+      </p>
+    </div>
+    
+    
     <ul class="social-link-list">
       <li class="social-item">
         <a href="">
@@ -25,10 +30,8 @@
         </a>
       </li>
     </ul>
-    <p class="footer-text-contacts">
-      Feel free to contact
-      <a class="footer-phone-number" href="tel:+610383766284">+610383766284</a>
-    </p>
+   
+    <p class="footer-text-contacts">Feel free to contact<a href="tel:+610383766284" class="footer-phone-number">&nbsp;+61 (0) 383 766 284</p>
     <div class="footer-string">
       <p class="text-copyright">© 2023 - IceCream. All Rights Reserved.</p>
     </div>
