--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,6 +1,10 @@
 p {
   margin: 0;
 }
+.footer {
+  display: flex;
+  flex-direction: column;
+}
 .footer_title_first {
   font-family: var(--primary-font);
   font-style: normal;
@@ -11,6 +15,7 @@ p {
   padding-top: 60px;
   margin-bottom: 16px;
   color: #fcfcfc;
+  display: inline-block;
 }
 .footer_title_secondary {
   font-family: var(--primary-font);
