--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,10 +1,87 @@
 .about-lable {
     font-family: var(--primary-font);
-     font-weight: 800;
-    font-size: 22px;
-    line-height: 1.23;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.22;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FCFCFC;
+}
+
+.about-title {
+    font-family: var(--secondary-font);
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.27;
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: #FCFCFC;
 }
+
+.about-list-paragraph {
+    font-family: var(--primary-font);   
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.75;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #FCFCFC;
+}
+
+.about-btn {
+    background: #F8D24E;
+    border-radius: 10px;
+
+    font-family: var(--primary-font);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.29;
+}
+
+.about-btn::after {
+    content: ">";
+    background: #000000;
+}
+
+@media screen and (min-width: 768px) {
+.about-lable {
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 1.23;
+    letter-spacing: 0.04em;;
+       }
+
+.about-title {
+    font-weight: 400;
+    font-size: 34px;
+    line-height: 1.26;
+    letter-spacing: 0.06em;
+           }
+
+.about-list-paragraph {
+    font-size: 12px;
+    line-height: 1.75;
+        }
+   }
+
+@media screen and (min-width: 1200px) {
+.about-lable {
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 1.23;
+    }
+    
+.about-title {
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 1.25;
+    }
+    
+.about-list-paragraph {
+    font-weight: 400;
+    font-size: 16px;
+    }
+        
+   }
