--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,11 +8,57 @@
   </head>
   <body>
     <!--HERO-->
-    <section class="section-hero">
-      <div class="container">
-        <div class="hero">
-          <h1>ice cream made with passion</h1>
-          <button class="btn-hero" data-modal-open>Products</button>
+    <section class="hero">
+      <div class="container relative">
+        <div>
+          <h1>ice cream made with <span>passion</span></h1>
+          <ul class="list info">
+            <li>
+              <p class="title-info">16</p>
+              <p class="text-info">cafes</p>
+            </li>
+            <li>
+              <p class="title-info">23</p>
+              <p class="text-info">food trucks</p>
+            </li>
+          </ul>
+          <a href="#products" class="btn-products">Products</a>
+          <a href="#advantages" class="btn-how">How it’s made?</a>
+          <p class="article">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et
+          </p>
+          <img
+            src="../images/hero/ice-cream 480.svg"
+            alt="Big ice cream"
+            class="ice-cream"
+          />
+          <img
+            src="../images/hero/left 480.svg"
+            alt="Dots"
+            class="krapki-left"
+          />
+          <img
+            src="../images/hero/right 480.svg"
+            alt="Dots"
+            class="krapki-right"
+          />
+          <img
+            src="../images/hero/plate tablet.svg"
+            alt="Plate of ice cream"
+            class="plate"
+          />
+          <img
+            src="../images/hero/left-tablet.svg"
+            alt="Dots"
+            class="left-tablet"
+          />
+          <img
+            src="../images/hero/all-dots-desktop.svg"
+            alt="Dots"
+            class="all-dots"
+          />
+          <img src="../images/hero/Arrow.svg" alt="Arrow" class="arrow" />
         </div>
       </div>
     </section>
