--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,13 +1,37 @@
-.section-hero {
-  outline: 1px solid red;
-  padding-top: 50px;
-  padding-left: 20px;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.list {
+  display: flex;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+.hero {
+  min-width: 480px;
+  padding-top: 40px;
   background-color: #84a178;
+}
+
+.container {
+  width: 480px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 150px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.relative {
+  position: relative;
 }
 
 .hero h1 {
   width: 247px;
-  margin-bottom: 32px;
+  margin: 0px 0px 32px 0px;
   font-family: 'Seymour One';
   font-style: normal;
   font-weight: 400;
@@ -18,20 +42,318 @@
   color: #fcfcfc;
 }
 
-.btn-hero {
-  text-transform: uppercase;
-  width: 108px;
-  height: 38px;
+h1 span {
+  font-size: 33px;
+}
+
+.btn-products {
+  display: inline-block;
+  margin-right: 12px;
+  padding: 11px 26px;
   border: 2px solid #f8d24e;
   border-radius: 8px;
-  font-family: inherit;
-  font-size: 16px;
-  line-height: 1.1875;
-  color: var(--btn-studio-text);
-  background-color: var(--btn-studio-background);
-
-  font-weight: 700;
-  cursor: pointer;
-  letter-spacing: 0.04em;
+  font-family: 'Montserrat', serif;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
+  background-color: transparent;
+  text-decoration: none;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-products:hover,
+.btn-products:focus {
+  border: 2px solid #0a8817;
+}
+
+.btn-how {
+  display: inline-block;
+  border: none;
+  text-decoration: none;
+  background-color: transparent;
+  color: rgba(248, 210, 78, 1);
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 17px;
+  text-decoration-line: underline;
+  text-underline-offset: 2px;
+}
+
+.btn-how:hover {
+  color: #0a8817;
+}
+
+.btn-how:focus {
+  color: #fcfcfc;
+}
+
+.article {
+  display: none;
+  width: 139px;
+  margin-left: 184px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 140%;
+  color: #fcfcfc;
+}
+
+.ice-cream {
+  position: absolute;
+  width: 218px;
+  height: 267px;
+  bottom: 0px;
+  right: 20px;
+  z-index: 3;
+}
+
+.krapki-left {
+  position: absolute;
+  bottom: 0px;
+  left: 159px;
+  width: 110.31px;
+  z-index: 2;
+}
+
+.krapki-right {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  width: 130.5px;
+  z-index: 1;
+}
+
+.plate {
+  display: none;
+}
+
+.arrow {
+  position: absolute;
+  display: none;
+}
+
+.left-tablet {
+  position: absolute;
+  display: none;
+}
+
+.info {
+  position: absolute;
+  display: none;
+}
+
+.all-dots {
+  position: absolute;
+  display: none;
+}
+
+/* ============TABLET========== */
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    padding: 0 32px;
+    padding-bottom: 52px;
+  }
+
+  .hero {
+    padding-top: 14px;
+  }
+
+  .hero h1 {
+    margin: 0px 0px 24px 0px;
+  }
+
+  .btn-products {
+    margin-bottom: 39px;
+  }
+
+  .plate {
+    display: block;
+    position: absolute;
+    left: 32px;
+    bottom: 12px;
+    width: 152px;
+    height: 152px;
+    z-index: 10;
+  }
+
+  .krapki-left {
+    display: none;
+  }
+
+  .left-tablet {
+    display: block;
+    bottom: 0;
+    left: 0;
+    width: 110.14px;
+  }
+
+  .krapki-right {
+    width: 182.24px;
+  }
+
+  .ice-cream {
+    width: 268px;
+    height: 329px;
+    bottom: 0px;
+    right: 92px;
+  }
+
+  .article {
+    display: block;
+  }
+
+  .arrow {
+    display: block;
+    left: 216px;
+    bottom: 24px;
+  }
+
+  .info {
+    right: 32px;
+    top: 14px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .info li {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+
+  .title-info {
+    padding-bottom: 4px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 34px;
+    text-align: right;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #131313;
+  }
+
+  .text-info {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 10px;
+    text-align: right;
+    color: #fcfcfc;
+  }
+
+  .info li {
+    margin-bottom: 20px;
+  }
+}
+
+/*================ DESKTOP =================*/
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    padding: 0 16px;
+    padding-bottom: 143px;
+  }
+
+  .hero {
+    padding-top: 45px;
+  }
+
+  .hero h1,
+  .h1 span {
+    font-size: 38px;
+    line-height: 48px;
+  }
+
+  .hero h1 {
+    width: 367px;
+    margin-bottom: 28px;
+  }
+
+  .btn-products {
+    font-size: 14px;
+    line-height: 18px;
+    padding: 12px 34px;
+    margin-right: 34px;
+    margin-bottom: 109px;
+    border-radius: 10px;
+  }
+
+  .btn-products:focus {
+    color: #fcfcfc;
+  }
+
+  .btn-how {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .article {
+    margin-left: 241px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 140%;
+  }
+
+  .plate {
+    left: 16px;
+    bottom: 65px;
+    width: 225px;
+    height: 225px;
+  }
+
+  .all-dots {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+  .left-tablet,
+  .krapki-left,
+  .krapki-right {
+    display: none;
+  }
+
+  .ice-cream {
+    bottom: 0px;
+    right: 92px;
+    width: 456px;
+    height: 560px;
+  }
+
+  .info {
+    right: 16px;
+    top: 8px;
+  }
+
+  .title-info {
+    font-size: 46px;
+    line-height: 56px;
+  }
+
+  .text-info {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .arrow {
+    bottom: 103px;
+    left: 257px;
+  }
+
+  .info li {
+    margin-bottom: 16px;
+  }
 }
