--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -12,11 +12,10 @@
     <link rel="stylesheet" href="./stylegalery.css">
 </head>
 <section>
-    <div class="container gallery">
-        тут твій код
-        <div class="grennbg"></div>
-        <div class="gallery-img">
-            <img srcset="
+    <div class="container">
+        <div class="gallery">
+            <div class="gallery-img">
+                <img srcset="
             ../images/gallery/mob-gallery-1-@1x-280.jpg 280w,
             ../images/gallery/mob-gallery-1-@1x-480.jpg 480w,
             ../images/gallery/mob-gallery-1-@2x-560.jpg 560w,
@@ -25,11 +24,10 @@
             ../images/gallery/tab-gallery-1-@1x-1013.jpg 1013w,
             ../images/gallery/tab-gallery-1-@2x-1408.jpg 1408w,
             ../images/gallery/desk-gallery-1-@2x-2026.jpg 2026w
-            "
-            src="../images/gallery/desk-gallery-1-@1x-1013.jpg" alt="Мороженко">
-        </div>
-        <div class="gallery-img visual-hidden">
-            <img srcset="
+            " src="../images/gallery/desk-gallery-1-@1x-280.jpg" alt="Мороженко">
+            </div>
+            <div class="gallery-img visual-hidden">
+                <img srcset="
                     ../images/gallery/mob-gallery-2-@1x-280.jpg 280w,
                     ../images/gallery/mob-gallery-2-@1x-480.jpg 480w,
                     ../images/gallery/mob-gallery-2-@2x-560.jpg 560w,
@@ -39,9 +37,9 @@
                     ../images/gallery/tab-gallery-2-@2x-1408.jpg 1408w,
                     ../images/gallery/desk-gallery-2-@2x-2026.jpg 2026w
                     " src="../images/gallery/desk-gallery-2-@1x-1013.jpg" alt="Мороженко2">
-        </div>
-        <div class="gallery-img visual-hidden">
-            <img srcset="
+            </div>
+            <div class="gallery-img visual-hidden">
+                <img srcset="
                     ../images/gallery/mob-gallery-3-@1x-280.jpg 280w,
                     ../images/gallery/mob-gallery-3-@1x-480.jpg 480w,
                     ../images/gallery/mob-gallery-3-@2x-560.jpg 560w,
@@ -51,7 +49,8 @@
                     ../images/gallery/tab-gallery-3-@2x-1408.jpg 1408w,
                     ../images/gallery/desk-gallery-3-@2x-2026.jpg 2026w
                     " src="../images/gallery/desk-gallery-3-@1x-1013.jpg" alt="Мороженко3">
+            </div>
+            <div class="whitebg"></div>
         </div>
-        <div class="whitebg"></div>
     </div>
 </section>
