--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,9 @@
 <footer class="footer_body">
   <div class="container">
     <div class="footer">
-      <p class="footer_title_first">homemade ice cream made
-        <span class="footer_title_secondary">with passion</span>
-      </p>
+      <p class="footer_title_first">homemade ice cream made</p>
+      <p class="footer_title_secondary">with passion</p>
     </div>
-    
-    
     <ul class="social-link-list">
       <li class="social-item">
         <a href="">
@@ -30,10 +27,17 @@
         </a>
       </li>
     </ul>
-   
-    <p class="footer-text-contacts">Feel free to contact<a href="tel:+610383766284" class="footer-phone-number">&nbsp;+61 (0) 383 766 284</p>
+    <p class="footer-text-contacts">
+      Feel free to contact<a
+        href="tel:+610383766284"
+        class="footer-phone-number"
+        >&nbsp;+61 (0) 383 766 284</a
+      >
+    </p>
     <div class="footer-string">
-      <p class="text-copyright">© 2023 - IceCream. All Rights Reserved.</p>
+      <p class="text-copyright">
+        © 2023 - IceCream. <br/>All Rights Reserved.
+      </p>
     </div>
   </div>
 </footer>
