--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,10 +1,12 @@
 p {
   margin: 0;
 }
-.footer {
-  display: flex;
-  flex-direction: column;
+.container {
+  width: 480px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 .footer_title_first {
   font-family: var(--primary-font);
   font-style: normal;
@@ -16,6 +18,7 @@ p {
   margin-bottom: 16px;
   color: #fcfcfc;
   display: inline-block;
+  width: 232px;
 }
 .footer_title_secondary {
   font-family: var(--primary-font);
@@ -25,7 +28,7 @@ p {
   line-height: 41px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-
+  width: 200px;
   color: #fcfcfc;
 }
 
