--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
 
     
-<p class="container header-text">
+<!-- <p class="container header-text">
     Hello, DevHunt command
-</p>
+</p> -->
     
 
 
