--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./stylegalery.css">
+    <link rel="stylesheet" href="../sass/_gallery.scss">
 </head>
 <section>
     <div class="container">
