--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer_body">
-  <div class="container">
+<footer class="footer_body container">
+  <div class="">
     <div class="footer">
       <p class="footer_title_first">homemade ice cream made</p>
       <p class="footer_title_secondary">with passion</p>
