--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -59,7 +59,6 @@ h1 span {
   color: #000000;
   background-color: transparent;
   text-decoration: none;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-products:hover,
@@ -109,6 +108,12 @@ h1 span {
   bottom: 0px;
   right: 20px;
   z-index: 3;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 
 .krapki-left {
@@ -117,6 +122,12 @@ h1 span {
   left: 159px;
   width: 110.31px;
   z-index: 2;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 
 .krapki-right {
@@ -125,10 +136,22 @@ h1 span {
   right: 0px;
   width: 130.5px;
   z-index: 1;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 
 .plate {
   display: none;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 
 .arrow {
@@ -139,6 +162,12 @@ h1 span {
 .left-tablet {
   position: absolute;
   display: none;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 
 .info {
@@ -149,6 +178,12 @@ h1 span {
 .all-dots {
   position: absolute;
   display: none;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 
 /* ============TABLET========== */
@@ -355,5 +390,22 @@ h1 span {
 
   .info li {
     margin-bottom: 16px;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
