--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -13,7 +13,6 @@
 .hero {
   min-width: 480px;
   padding-top: 40px;
-  background-color: #84a178;
 }
 
 .container {
@@ -32,9 +31,8 @@
 .hero h1 {
   width: 247px;
   margin: 0px 0px 32px 0px;
-  font-family: 'Seymour One';
+  font-family: var(--secondary-font);
   font-style: normal;
-  font-weight: 400;
   font-size: 26px;
   line-height: 33px;
   letter-spacing: 0.04em;
@@ -52,7 +50,7 @@ h1 span {
   padding: 11px 26px;
   border: 2px solid #f8d24e;
   border-radius: 8px;
-  font-family: 'Montserrat', serif;
+  font-family: var(--primary-font);
   font-weight: 600;
   font-size: 12px;
   line-height: 15px;
@@ -72,7 +70,7 @@ h1 span {
   text-decoration: none;
   background-color: transparent;
   color: rgba(248, 210, 78, 1);
-  font-family: 'Montserrat';
+  font-family: var(--primary-font);
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
@@ -93,9 +91,8 @@ h1 span {
   display: none;
   width: 139px;
   margin-left: 184px;
-  font-family: 'Montserrat';
+  font-family: var(--primary-font);
   font-style: normal;
-  font-weight: 400;
   font-size: 12px;
   line-height: 140%;
   color: #fcfcfc;
@@ -265,8 +262,7 @@ h1 span {
 
   .title-info {
     padding-bottom: 4px;
-    font-family: 'Montserrat';
-    font-style: normal;
+    font-family: var(--primary-font);
     font-weight: 900;
     font-size: 28px;
     line-height: 34px;
@@ -277,9 +273,7 @@ h1 span {
   }
 
   .text-info {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 400;
+    font-family: var(--primary-font);
     font-size: 8px;
     line-height: 10px;
     text-align: right;
