--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,40 +4,41 @@
       <p class="footer_title_first">homemade ice cream made</p>
       <p class="footer_title_secondary">with passion</p>
     </div>
-    <ul class="social-link-list">
-      <li class="social-item">
-        <a href="">
-          <svg class="social-icon" width="34" height="34">
-            <use href="./images/sprite.svg#icon-github"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-item">
-        <a href="">
-          <svg class="social-icon" width="34" height="34">
-            <use href="./images/sprite.svg#icon-telegram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-item">
-        <a href="">
-          <svg class="social-icon" width="34" height="34">
-            <use href="./images/sprite.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
-    <p class="footer-text-contacts">
-      Feel free to contact<a
-        href="tel:+610383766284"
-        class="footer-phone-number"
-        >&nbsp;+61 (0) 383 766 284</a
-      >
-    </p>
-    <div class="footer-string">
-      <p class="text-copyright">
-        © 2023 - IceCream. <br/>All Rights Reserved.
+    <div>
+      <ul class="social-link-list">
+        <li class="social-item">
+          <a href="">
+            <svg class="social-icon" width="34" height="34">
+              <use href="./images/sprite.svg#icon-github"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="">
+            <svg class="social-icon" width="34" height="34">
+              <use href="./images/sprite.svg#icon-telegram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="">
+            <svg class="social-icon" width="34" height="34">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <p class="footer-text-contacts">
+        Feel free to contact<a
+          href="tel:+610383766284"
+          class="footer-phone-number"
+          >&nbsp;+61 (0) 383 766 284</a
+        >
       </p>
+    </div>
+    
+    <div class="footer-string">
+      <p class="text-copyright">© 2023 - IceCream. All Rights Reserved.</p>
     </div>
   </div>
 </footer>
