--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -13,6 +13,20 @@ p {
   color: #fcfcfc;
   display: inline-block;
   width: 232px;
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 32px;
+    letter-spacing: 0.04em;
+    width: 352px;
+    padding-top: 40px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 37px;
+    width: 504px;
+    padding-top: 120px;
+  }
 }
 .footer_title_secondary {
   font-family: var(--primary-font);
@@ -24,6 +38,18 @@ p {
   text-transform: uppercase;
   width: 200px;
   color: #fcfcfc;
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 59px;
+    letter-spacing: 0.06em;
+    width: 352px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 71px;
+    letter-spacing: 0.06em;
+    width: 497px;
+  }
 }
 
 .footer_body {
@@ -45,6 +71,12 @@ p {
   justify-content: flex-end;
   gap: 20px;
   margin-bottom: 20px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 34px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 40px;
+  }
 }
 .footer-text-contacts {
   font-family: var(--primary-font);
@@ -55,6 +87,15 @@ p {
   text-align: right;
   color: #131313;
   margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 60px;
+    font-size: 14px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 60px;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+  }
 }
 .footer-phone-number {
   color: #fcfcfc;
@@ -72,6 +113,12 @@ p {
   line-height: 152%;
   text-align: center;
   color: #7a7a7a;
-  padding-top: 20px;
-  padding-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 24px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
 }
