--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,41 +3,49 @@
   <div class="container relative">
     <div>
       <h1>ice cream made with <span>passion</span></h1>
-      <ul class="list info">
+      <ul class="hero-list hero-info">
         <li>
-          <p class="title-info">16</p>
-          <p class="text-info">cafes</p>
+          <p class="hero-title-info">16</p>
+          <p class="hero-text-info">cafes</p>
         </li>
         <li>
-          <p class="title-info">23</p>
-          <p class="text-info">food trucks</p>
+          <p class="hero-title-info">23</p>
+          <p class="hero-text-info">food trucks</p>
         </li>
       </ul>
-      <a href="" class="btn-products">Products</a>
-      <a href="" class="btn-how">How it’s made?</a>
-      <p class="article">
+      <a href="" class="hero-btn-products">Products</a>
+      <a href="" class="hero-btn-how">How it’s made?</a>
+      <p class="hero-article">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et
       </p>
       <img
         src="./images/hero/ice-cream 480.svg"
         alt="Big ice cream"
-        class="ice-cream"
+        class="hero-ice-cream"
       />
-      <img src="./images/hero/left 480.svg" alt="Dots" class="krapki-left" />
-      <img src="./images/hero/right 480.svg" alt="Dots" class="krapki-right" />
+      <img src="./images/hero/left 480.svg" alt="Dots" class="hero-dots-left" />
+      <img
+        src="./images/hero/right 480.svg"
+        alt="Dots"
+        class="hero-dots-right"
+      />
       <img
         src="./images/hero/plate tablet.svg"
         alt="Plate of ice cream"
-        class="plate"
+        class="hero-plate"
       />
-      <img src="./images/hero/left-tablet.svg" alt="Dots" class="left-tablet" />
+      <img
+        src="./images/hero/left-tablet.svg"
+        alt="Dots"
+        class="hero-left-tablet"
+      />
       <img
         src="./images/hero/all-dots-desktop.svg"
         alt="Dots"
-        class="all-dots"
+        class="hero-all-dots"
       />
-      <img src="./images/hero/Arrow.svg" alt="Arrow" class="arrow" />
+      <img src="./images/hero/Arrow.svg" alt="Arrow" class="hero-arrow" />
     </div>
   </div>
 </section>
