--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -73,6 +73,7 @@ p {
   margin-bottom: 20px;
   @media screen and (min-width: 768px) {
     margin-bottom: 34px;
+    gap: 30px;
   }
   @media screen and (min-width: 1200px) {
     margin-bottom: 40px;
@@ -113,11 +114,24 @@ p {
   line-height: 152%;
   text-align: center;
   color: #7a7a7a;
-
-  @media screen and (min-width: 768px) {
+  padding-bottom: 20px;
+  padding-top: 20px;
+  @media screen and (max-width: 480px) {
+    width: 159px;
+    margin: auto;
+  }
+  @media screen and (min-width: 480px) {
     padding-bottom: 24px;
+    padding-top: 20px;
   }
   @media screen and (min-width: 768px) {
+    font-size: 14px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    letter-spacing: 0.02em;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 12px;
     padding-top: 12px;
     padding-bottom: 12px;
   }
