--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,33 +1,8 @@
 <section class="about">
-  <div class="container">
+  <div class="container about-container">
     <p class="about-lable">tradition and love</p>
     <h2 class="about-title">how it’s made?</h2>
-    <ul class="about-list">
-      <li class="about-list-item">
-        <p class="about-list-paragraph">
-          Ice is a place where you will become not only a little happier, but
-          also healthier. Health is the main value for us, and we follow it when
-          creating our handmade desserts.
-        </p>
-      </li>
-      <li class="about-list-item">
-        <p class="about-list-paragraph">
-          We use traditional recipes and 100% natural ingredients. Our products
-          are so natural that they can be given to children from the age of
-          three years. Sweets lovers can expect 55 types of ice cream, 15 types
-          of coffee and 23 milkshakes.
-        </p>
-      </li>
-      <li class="about-list-item">
-        <p class="about-list-paragraph">
-          This is enough to choose ice cream and coffee for any mood!
-        </p>
-      </li>
-      <li class="about-list-item">
-        <button class="about-btn" type="button">Read more</button>
-      </li>
-    </ul>
-    <picture>
+     <picture class="about-picture">
       <source
         srcset="
           ./images/about_cow_desk.webp    1x,
@@ -75,5 +50,31 @@
       />
       <img src="./images/about_cow_mob.png" alt="a cow grazes in the field" />
     </picture>
+    <ul class="about-list">
+      <li class="about-list-item">
+        <p class="about-list-paragraph">
+          Ice is a place where you will become not only a little happier, but
+          also healthier. Health is the main value for us, and we follow it when
+          creating our handmade desserts.
+        </p>
+      </li>
+      <li class="about-list-item">
+        <p class="about-list-paragraph">
+          We use traditional recipes and 100% natural ingredients. Our products
+          are so natural that they can be given to children from the age of
+          three years. Sweets lovers can expect 55 types of ice cream, 15 types
+          of coffee and 23 milkshakes.
+        </p>
+      </li>
+      <li class="about-list-item">
+        <p class="about-list-paragraph">
+          This is enough to choose ice cream and coffee for any mood!
+        </p>
+      </li>
+      <li class="about-list-item">
+        <button class="about-btn" type="button">Read more</button>
+      </li>
+    </ul>
+   
   </div>
 </section>
