--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,30 +1,30 @@
 <section class="products">
     <div class="container">
-<p>100% natural</p>
-<h2>products</h2>
-<ul>
-    <li>
-        <h3>ice cream</h3>
-        <p>Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
-        <svg>
+<p class="products-natural">100% natural</p>
+<h2 class="products-title">products</h2>
+
+<ul class="products-list">
+    <li class="products-item products-item-cream ">
+        <h3 class="products-item-title">ice cream</h3>
+        <p class="products-text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
+        <svg width="40" height="16">
             <use></use>
         </svg>
     </li>
-    <li>
-        <h3>ice coffee</h3>
-        <p>Fragrant invigorating drink created from 100% natural ingredients without the use of preservatives and flavor enhancers</p>
-        <svg>
+    <li class="products-item products-item-coffee">
+        <h3 class="products-item-title">ice coffee</h3>
+        <p class="products-text">Fragrant invigorating drink created from 100% natural ingredients without the use of preservatives and flavor enhancers</p>
+        <svg width="40" height="16">
             <use></use>
         </svg>
     </li>
-    <li>
-        <h3>milkshakes</h3>
-        <p>Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets of your choice</p>
-        <svg>
+    <li class="products-item products-item-milkshakes">
+        <h3 class="products-item-title">milkshakes</h3>
+        <p class="products-text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets of your choice</p>
+        <svg width="40" height="16">
             <use></use>
         </svg>
     </li>
 </ul>
-
     </div>
 </section>
