--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,7 +1,7 @@
 .products-natural {
     font-family: var(--primary-font);
     font-weight: 800;
-    text-align: center;
+    text-align: right;
     line-height: 1.22;
 }
 .products-title {
@@ -20,6 +20,6 @@
     background-color: #D6936D;
 }
 .products-item {
-border-radius: 50px;
-background-color: #19c747;
+border-radius: 24px;
+
 }
