--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,10 @@
-<footer class="footer_body container">
-  <div class="">
-    <div class="footer">
-      <p class="footer_title_first">homemade ice cream made</p>
-      <p class="footer_title_secondary">with passion</p>
+<footer class="footer-body container">
+  <div class="footer">
+    <div class="footer-title">
+      <p class="footer-title-first">homemade ice cream made</p>
+      <p class="footer-title-secondary">with passion</p>
     </div>
-    <div>
+    <div class="footer-contacts-item">
       <ul class="social-link-list">
         <li class="social-item">
           <a href="">
@@ -36,7 +36,8 @@
         >
       </p>
     </div>
-
+  </div>
+  <div class="">
     <div class="footer-string">
       <p class="text-copyright">© 2023 - IceCream. All Rights Reserved.</p>
     </div>
